--- a/vet_app/pubspec.yaml
+++ b/vet_app/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  carousel_slider: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -74,7 +75,9 @@ flutter:
   # see https://flutter.dev/custom-fonts/#from-packages
 
   assets:
-    - assets/logo.png
-    - assets/bell.png
-    - assets/home.png
-    - assets/settings.png
+    - assets/images/logo.png
+    - assets/icons/calendar.png
+    - assets/icons/paw.png
+    - assets/icons/medicine.png
+    - assets/icons/vaccine.png
+    - assets/images/man.jpeg
