--- a/vet_app/android/build.gradle
+++ b/vet_app/android/build.gradle
@@ -10,7 +10,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // Firebase
-        classpath 'com.google.gms:google-services:4.3.10'
+        // classpath 'com.google.gms:google-services:4.3.10'
     }
 }
 
