--- a/vet_app/pubspec.yaml
+++ b/vet_app/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
   cupertino_icons: ^1.0.0
   carousel_slider: ^3.0.0
 
-  cloud_firestore: ^0.13.0+1
+  #cloud_firestore: ^0.13.0+1
 
 dev_dependencies:
   flutter_test:
