--- a/vet_app/pubspec.yaml
+++ b/vet_app/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   carousel_slider: ^3.0.0
 
   #cloud_firestore: ^0.13.0+1
+  http:
+  fluttertoast:
 
 dev_dependencies:
   flutter_test:
