Created confirmation screen

--- a/vet_app/pubspec.yaml
+++ b/vet_app/pubspec.yaml
@@ -89,3 +89,4 @@ flutter:
     - assets/icons/home.png
     - assets/icons/bell.png
     - assets/icons/settings.png
+    - assets/images/okImage.png
